--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,10 @@ license = Perl_5
 copyright_holder = José Eduardo Perotta de Almeida
 copyright_year   = 2011
 
-version = 0.002
+version = 0.003
 
 [@Basic]
+[AutoPrereqs]
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
